main/jenkins/jenkins-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-clusterip
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
