main/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins.devops.[[DOMAIN]]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-clusterip
            port:
              number: 8080
